hphp/test/zend/good/ext/standard/tests/file/lchown_basic.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') die('skip no windows support');
if (!function_exists("posix_getuid")) die("skip no posix_getuid()");
?>