hphp/test/zend/bad/ext/standard/tests/file/lchgrp_basic.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') die('skip no windows support');
if (!function_exists("posix_getgid")) die("skip no posix_getgid()");
?>